<resources>
    <string name="app_name">Coba_LilMile</string>


    <string-array name="blood_types">
        <item>Pilih Golongan Darah</item>
        <item>A</item>
        <item>B</item>
        <item>O</item>
        <item>AB</item>
    </string-array>

    <string name="profil">Statistics</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="fill_namalengkap">Masukkan Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="fill_email">Masukkan Alamat Email</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="fill_alamat">Masukkan Alamat</string>
    <string name="alamat">Alamat</string>
    <string name="fill_kecamatan">Masukkan Kecamatan</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="fill_kabupaten_kota">Masukkan Kabupaten/Kota</string>
    <string name="kabupaten_kota">Kabupaten/Kota</string>
    <string name="fill_provinsi">Masukkan Provinsi</string>
    <string name="provinsi">Provinsi</string>
    <string name="opsiDetail">Tinggi Badan (cm)</string>
    <string name="interPret">Interpretasi: </string>
    <string name="hasilInterpret">-</string>
    <string name="hasilInter">Tinggi badan anak sesuai umur. Pantau ulang tinggi badan secara berkala</string>
    <string name="greetingUser"> User!</string>

    <string name="namaAnak">Fatih</string>
    <string name="umurANak">0 Tahun 9 Bulan</string>


    <string name="judulChart">Tinggi Badan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>